@@ -1,3 +1,8 @@
+2005-06-25  Hagen Moebius  <hagen.moebius@starschiffchen.de>
+
+	* src/framework/ConsoleBackend.
+		* Added history managedment to the console.
+
 2005-06-24  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/components/ogre/EmberPhysicalEntity.cpp
